manifests/kube-prometheus/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: monitoring
#  annotations:
#    nginx.ingress.kubernetes.io/whitelist-source-range: ""
#    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.apctech.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
  # tls:
  #   - hosts:
  #     - grafana.apctech.ru
  #     secretName: nginx-secret
